--- a/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain&Lescouflair&Suy-war/web/templates/default_template.xhtml
+++ b/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain&Lescouflair&Suy-war/web/templates/default_template.xhtml
@@ -2,30 +2,66 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+       xmlns:p="http://primefaces.org/ui"
+       xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        
-        <link href="../resources/css/cssLayout.css" rel="stylesheet" type="text/css"/>
-        <link href="../resources/css/default.css" rel="stylesheet" type="text/css"/>
-        
-        <title>Facelets Template</title>
+       <h:outputStylesheet library="css" name="default.css"/>  
+        <h:outputStylesheet library="css" name="cssLayout.css"/> 
+        <title>Banque-<ui:insert name="complementTitreEtH1"/></title>
+
+       
     </h:head>
 
     <h:body>
 
         <div id="top">
-            <ui:insert name="top">Top</ui:insert>
-        </div>
-        <div>
-            <div id="left">
-                <ui:insert name="left">Left</ui:insert>
+            <div>
+                <h1>GesBank</h1>
             </div>
-            <div id="content" class="left_content">
-                <ui:insert name="content">Content</ui:insert>
+            <div id="top-bottom-box">
+                <div id="user-box"></div>                
+                <div id="user-log"><h3>Jean max Belrive</h3></div> 
             </div>
         </div>
+        <div id="container">
+           
+            
+                <div id="left">
+                    
+                    <div id="menu-title"><h2>Menu</h2></div>
+                    <div class="paddin-content">
+                        
+                            <h:form> 
+                                <p:menu toggleable="true" styleClass="menu-Body-width-full">
+                                    <p:submenu label="Ajax" styleClass="menu-Headers-text-color" >
+                                            <p:menuitem value="Save" actionListener="#{menuView.save}"  icon="ui-icon-disk" />
+                                            <p:menuitem value="Update" actionListener="#{menuView.update}"  icon="ui-icon-arrowrefresh-1-w"/>
+                                        </p:submenu>
+                                        <p:submenu label="Non-Ajax" styleClass="menu-Headers-text-color">
+                                            <p:menuitem value="Delete" actionListener="#{menuView.delete}"  ajax="false" icon="ui-icon-close"/>
+                                        </p:submenu>
+                                        <p:submenu label="Navigations" styleClass="menu-Headers-text-color">
+                                            <p:menuitem value="External" url="http://www.primefaces.org" icon="ui-icon-home"/>
+                                            <p:menuitem value="Internal" url="http://www.primefaces.org" icon="ui-icon-star"/>
+                                        </p:submenu>
+                                    </p:menu>
+                            </h:form>   
+                    </div>
+                </div>
+
+
+                <div id="content" class="right_content">
+                    <ui:insert name="content">Content</ui:insert>
+                </div>
+
+            
+        </div>
+        
+        
+        
         <div id="bottom">
             <ui:insert name="bottom">Bottom</ui:insert>
         </div>
