--- a/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain&Lescouflair&Suy-war/web/templates/default_template.xhtml
+++ b/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain&Lescouflair&Suy-war/web/templates/default_template.xhtml
@@ -8,7 +8,7 @@
 
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-       <h:outputStylesheet library="css" name="default.css"/>  
+        <h:outputStylesheet library="css" name="default.css"/>  
         <h:outputStylesheet library="css" name="cssLayout.css"/> 
         <title>Banque-<ui:insert name="complementTitreEtH1"/></title>
 
@@ -54,6 +54,7 @@
 
 
                 <div id="content" class="right_content">
+                    <div id="content-title"><h4><ui:insert name="content-title">Liste des comptes</ui:insert></h4></div>
                     <ui:insert name="content">Content</ui:insert>
                 </div>
 
@@ -63,7 +64,8 @@
         
         
         <div id="bottom">
-            <ui:insert name="bottom">Bottom</ui:insert>
+           2015 copyright &copy; MBDS Haiti <br/>
+           Elisabeth Ashley Astrid Germain, Gaetan Robert Lescouflair, Rachele Suy
         </div>
 
     </h:body>
