ajout formulaire creeer client et depot/retrait

--- a/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-war/web/templates/default_template.xhtml
+++ b/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-war/web/templates/default_template.xhtml
@@ -31,7 +31,20 @@
                 <div id="user-box"></div>                
                 <div id="user-log"><h3>#{loginMBean.client.prenom} #{loginMBean.client.nom}  </h3> <h:form> <p:commandButton value="Se Deconnecter" id="btn_deconnexion" actionListener="#{loginMBean.deconnexion}" ajax="false" /></h:form></div> 
             </div>
+            
+           <!-- <div id="menuPrincipal">
+            <ul id="menu_horizontal">
+                <li><a href="#">Accueil</a></li>
+                <li><a href="#">Comptes</a></li>
+                <li><a href="#">Clients</a></li>
+                <li><a href="#">Operations</a></li>
+                
+            </ul>
+
+            
+        </div>-->
         </div>
+        
         <div id="container">
            
             
