--- a/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-war/web/resources/css/cssLayout.css
+++ b/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-war/web/resources/css/cssLayout.css
@@ -25,15 +25,16 @@ body,html{
 
 #top-bottom-box{
     position: absolute;
-    border-top: 1px solid whitesmoke;
+    border-bottom: 1px solid whitesmoke;
     width: 98.2%;
-    height: 30px;
+    height: 90px;
     box-shadow: #808080 1px;
     bottom: 1px;
 }
 #user-box{
     display: inline-block;
     width:  75%;
+        margin-right: 0;
 }
 
 #user-log{
@@ -141,4 +142,42 @@ body,html{
   text-decoration : underline;
 }
 
+.classField{
+    width: 550px;   
+    height: 30px;  
+    
+}
+
+.classFormMargin {
+   margin: 10px; 
+}
+
+.classBtn {
+     width: 150px;   
+     height: 30px;
+     background-color: lightblue;
+     color: red;
+} 
+
+.classBtnBig {
+     width: 100%;   
+     height: 35px;
+     background-color: lightblue;
+     color: red;
+     margin-top: 10px;
+     margin-bottom: 10px; 
+     margin: auto;
+} 
+
+.classFormCenter {
+    width : 60%;
+     margin: auto;
+} 
+
+.classBtn:hover {
+     width: 150px;   
+     height: 30px;
+     background-color: lightblue;
+     color: whitesmoke;
+}   
 
