--- a/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-war/web/resources/css/default.css
+++ b/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-war/web/resources/css/default.css
@@ -15,6 +15,10 @@ body {
     color: #D20005;
 } */
 
+#top{
+    border-radius:25px 25px 0 0;
+    
+}
 
 h1 {
     font-family: Arial, "Arial CE", "Lucida Grande CE", lucida, "Helvetica CE", sans-serif;
@@ -44,5 +48,63 @@ a:link, a:visited {
 a:link:hover, a:visited:hover  {
   color: #045491;
   font-weight : bold;
-  text-decoration : underline;
+  text-decoration : none;
+}
+/*menu Principal*/
+
+#menu_horizontal ul {
+    float: left;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+    
+}
+
+#menu_horizontal a {
+    float: left;
+    width: 14.05em;
+    margin:auto;
+    text-decoration: none;
+    color: white;
+    background-color: purple;
+    padding: 0.2em 0.6em;
+    border-right: 1px solid white;
+    height:90%;
+    text-align:  center;
+}
+
+#menu_horizontal a:hover {
+    background-color: fuchsia;
+   
+}
+
+#menu_horizontal li {
+    display: inline;
+    
+}
+
+#menuPrincipal{
+    height:20%;
+    width:100%;
+    background-color: #AFAFAF;
+    position:absolute;
+    bottom:0;
+    margin:auto;
+    
+}
+#menu_horizontal{
+    width:61.4em;
+    margin-left:15%;
+    height:100%;
+    position: relative;
+    border:solid red 1px;
+    margin:auto;
+    
+}
+
+#top-bottom-box{
+    
+    float:right;
+    top:0;
 }
