creation des formes d'enregistrements clients et compte

--- a/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-war/web/resources/css/cssLayout.css
+++ b/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-war/web/resources/css/cssLayout.css
@@ -60,7 +60,7 @@ body,html{
     
 }
 #container{
-    min-height: 30%;
+    min-height: 35%;
 }
 
 #left {
@@ -181,3 +181,7 @@ body,html{
      color: whitesmoke;
 }   
 
+#content{
+    
+    min-height: 75%;
+}
